added total ticket count module

--- a/styles/main.css
+++ b/styles/main.css
@@ -20,6 +20,8 @@ h1,h2,h3,h4,h5,h6 {
 
 .ticketBooth {
     margin-bottom: 1rem;
+    background-color: lightgrey;
+    padding: 1rem;
 }
 
 .attractions {
